--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 bin/*
 
-# Prerequisites
-*.d
-
 # Compiled Object files
 *.slo
 *.lo
@@ -37,3 +34,9 @@ bin/*
 build
 *.xcodeproj/*
 !*.xcodeproj/project.pbxproj
+.dub
+docs.json
+__dummy.html
+*.o
+*.obj
+__test__*__
